[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/string_keys/string_keys_dock.gd" type="Script" id=1]

[node name="StringKeys" type="ScrollContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 771.0
follow_focus = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="."]
margin_right = 320.0
margin_bottom = 838.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Grid" type="GridContainer" parent="VBox"]
margin_right = 320.0
margin_bottom = 814.0
columns = 2

[node name="Label_TranslationFile" type="Label" parent="VBox/Grid"]
margin_top = 5.0
margin_right = 111.0
margin_bottom = 19.0
hint_tooltip = "File name and path in CSV format.
If it exists it'll be modified, if it doesn't it'll be created.

Ex: res://localization/translations.csv"
mouse_filter = 1
text = "Translation File*"

[node name="LineEdit_TranslationFile" type="LineEdit" parent="VBox/Grid"]
margin_left = 115.0
margin_right = 320.0
margin_bottom = 24.0
size_flags_horizontal = 3
placeholder_text = "res://*.csv"
caret_blink = true
caret_blink_speed = 0.5

[node name="Label_KeyFinding" type="Label" parent="VBox/Grid"]
margin_top = 64.0
margin_right = 111.0
margin_bottom = 78.0
hint_tooltip = "File name in CSV format.
If it exists it'll be modified, if it doesn't it'll be created."
mouse_filter = 1
size_flags_vertical = 8
custom_colors/font_color = Color( 0.513726, 0.639216, 0.823529, 1 )
text = "Key Finding:"

[node name="Control" type="Control" parent="VBox/Grid"]
margin_left = 115.0
margin_top = 28.0
margin_right = 320.0
margin_bottom = 78.0
rect_min_size = Vector2( 0, 50 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_FileTypes" type="Label" parent="VBox/Grid"]
margin_top = 106.0
margin_right = 111.0
margin_bottom = 137.0
hint_tooltip = "List of file types to check, seperated by commas.

Supported types include any text file that saves strings between \"qoutation marks\" such as:
    Text Scene:              .tscn
    Text Resource:       .tres
    GD Script:                 .gd
    C# Script:                 .cs
    And other text based programming files.
	
Also supports certain Godot specific binary files:
    Binary Scene:         .scn
    Binary Resource:  .res
    Visual Script:           .vs
    Note: Binary files are a little slower to find keys from since StringKeys converts them to a temporary text file first"
mouse_filter = 1
text = "File Types
to Check*"

[node name="TextEdit_FileTypes" type="TextEdit" parent="VBox/Grid"]
margin_left = 115.0
margin_top = 82.0
margin_right = 320.0
margin_bottom = 162.0
rect_min_size = Vector2( 0, 80 )
text = "tscn, tres, gd, cs,
scn, res, vs,"
wrap_enabled = true
caret_blink = true

[node name="Label_PathsToIgnore" type="Label" parent="VBox/Grid"]
margin_top = 280.0
margin_right = 111.0
margin_bottom = 311.0
hint_tooltip = "Paths from res:// to ignore, seperated by commas (don't include res://)"
mouse_filter = 1
text = "Paths to
Ignore"

[node name="TextEdit_PathsToIgnore" type="TextEdit" parent="VBox/Grid"]
margin_left = 115.0
margin_top = 166.0
margin_right = 320.0
margin_bottom = 426.0
rect_min_size = Vector2( 0, 260 )
text = ".git, .import, addons,"
wrap_enabled = true
caret_blink = true

[node name="Label_Locales" type="Label" parent="VBox/Grid"]
margin_top = 463.0
margin_right = 111.0
margin_bottom = 477.0
hint_tooltip = "What language locale codes to include? Seperated by commas.
Common include:
en: English
es: Spanish
pt: Portuguese
fr: French
it: Italian
de: German
nl: Dutch
ru: Russian
ja: Japanese
zh: Chinese
ko: Korean
Country can also be specified after language such as en_US"
mouse_filter = 1
text = "Locales*"

[node name="TextEdit_Locales" type="TextEdit" parent="VBox/Grid"]
margin_left = 115.0
margin_top = 430.0
margin_right = 320.0
margin_bottom = 510.0
rect_min_size = Vector2( 0, 80 )
text = "en"
wrap_enabled = true
caret_blink = true

[node name="Label_Prefix" type="Label" parent="VBox/Grid"]
margin_top = 519.0
margin_right = 111.0
margin_bottom = 533.0
hint_tooltip = "All strings that start with this will be added as a translation key.
Should be something that you're sure won't be used on a string that should't be translated such as $$
Do not use a backslash ( \\ )

You can write something before the prefix that will be ignored in Text From Key, that can be used to
catagorize your keys, such as having all UI elements go like: \"UI{prefix}{text}\"  ex:  \"UI$$New Game\""
mouse_filter = 1
text = "Prefix*"

[node name="LineEdit_Prefix" type="LineEdit" parent="VBox/Grid"]
margin_left = 115.0
margin_top = 514.0
margin_right = 320.0
margin_bottom = 538.0
size_flags_horizontal = 3
text = "$$"
placeholder_text = "Ex: $$, ##, or TR_"
caret_blink = true
caret_blink_speed = 0.5

[node name="Label_ModifiedOnly" type="Label" parent="VBox/Grid"]
margin_top = 547.0
margin_right = 111.0
margin_bottom = 561.0
hint_tooltip = "Only check files that have been modified since the last time \"Create Translation File\" was pressed
Provides massive performance improvement for large projects, highly recommend.

Remove Unused is disabled with this on as it would erase all keys from unmodified files

May need to disable to do a full run if a key isn't getting added (the file keeping track of what files have been changed may be out of sync)
May be a good idea to disable and use Remove Unused every once in a while to clean up keys that have been removed from the game"
mouse_filter = 1
text = "Modified Only"

[node name="CheckBox_ModifiedOnly" type="CheckBox" parent="VBox/Grid"]
margin_left = 296.0
margin_top = 542.0
margin_right = 320.0
margin_bottom = 566.0
size_flags_horizontal = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_AutoRunOnSave" type="Label" parent="VBox/Grid"]
margin_top = 575.0
margin_right = 111.0
margin_bottom = 589.0
hint_tooltip = "Should it automatically find all keys from a file you just saved?

Makes saving scenes/scripts/resources slower, but shouldn't
be too bad when your project isn't very big

Saved in seperate personal options file so that it doesn't automatically run on every team member's computer"
mouse_filter = 1
text = "Auto on Save"

[node name="CheckBox_AutoRunOnSave" type="CheckBox" parent="VBox/Grid"]
margin_left = 296.0
margin_top = 570.0
margin_right = 320.0
margin_bottom = 594.0
size_flags_horizontal = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_CsvFileCreation" type="Label" parent="VBox/Grid"]
margin_top = 634.0
margin_right = 111.0
margin_bottom = 648.0
hint_tooltip = "File name in CSV format.
If it exists it'll be modified, if it doesn't it'll be created."
mouse_filter = 1
size_flags_vertical = 8
custom_colors/font_color = Color( 0.513726, 0.639216, 0.823529, 1 )
text = "CSV File Creation:"

[node name="Control2" type="Control" parent="VBox/Grid"]
margin_left = 115.0
margin_top = 598.0
margin_right = 320.0
margin_bottom = 648.0
rect_min_size = Vector2( 0, 50 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_FillerStrings" type="Label" parent="VBox/Grid"]
margin_top = 657.0
margin_right = 111.0
margin_bottom = 671.0
hint_tooltip = "What StringKeys fills in empty translation slots (Godot requires something in each translation slot, even if it's an empty string), could be blank or an underscore _"
mouse_filter = 1
text = "Filler Strings"

[node name="LineEdit_FillerStrings" type="LineEdit" parent="VBox/Grid"]
margin_left = 115.0
margin_top = 652.0
margin_right = 320.0
margin_bottom = 676.0
size_flags_horizontal = 3
placeholder_text = "(can be left blank)"
caret_blink = true
caret_blink_speed = 0.5

[node name="Label_TextFromKey" type="Label" parent="VBox/Grid"]
margin_top = 685.0
margin_right = 111.0
margin_bottom = 699.0
hint_tooltip = "Generate an initial translation for the first listed locale from the key (by removing the prefix and category before the prefix)"
mouse_filter = 1
text = "Text From Key"

[node name="CheckBox_TextFromKey" type="CheckBox" parent="VBox/Grid"]
margin_left = 296.0
margin_top = 680.0
margin_right = 320.0
margin_bottom = 704.0
size_flags_horizontal = 8
pressed = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_RemoveUnused" type="Label" parent="VBox/Grid"]
margin_top = 713.0
margin_right = 111.0
margin_bottom = 727.0
hint_tooltip = "Any keys in the csv file that aren't found by StringKeys in your game will be removed.
Be careful as there could be ones that are used, but StringKeys  wasn't set up to find anymore

Modified Only is disabled with this as it would get rid of all keys from unmodified files"
mouse_filter = 1
text = "Remove Unused"

[node name="CheckBox_RemoveUnused" type="CheckBox" parent="VBox/Grid"]
margin_left = 296.0
margin_top = 708.0
margin_right = 320.0
margin_bottom = 732.0
size_flags_horizontal = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_Debug" type="Label" parent="VBox/Grid"]
margin_top = 772.0
margin_right = 111.0
margin_bottom = 786.0
hint_tooltip = "File name in CSV format.
If it exists it'll be modified, if it doesn't it'll be created."
mouse_filter = 1
size_flags_vertical = 8
custom_colors/font_color = Color( 0.513726, 0.639216, 0.823529, 1 )
text = "Debug:"

[node name="Control3" type="Control" parent="VBox/Grid"]
margin_left = 115.0
margin_top = 736.0
margin_right = 320.0
margin_bottom = 786.0
rect_min_size = Vector2( 0, 50 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_PrintOutput" type="Label" parent="VBox/Grid"]
margin_top = 795.0
margin_right = 111.0
margin_bottom = 809.0
hint_tooltip = "Should StringKeys print to the output tab things like what files it searched and what keys it found? It will print errors either way."
mouse_filter = 1
text = "Print to Output"

[node name="CheckBox_PrintOutput" type="CheckBox" parent="VBox/Grid"]
margin_left = 296.0
margin_top = 790.0
margin_right = 320.0
margin_bottom = 814.0
size_flags_horizontal = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="VBox"]
margin_top = 818.0
margin_right = 320.0
margin_bottom = 838.0
hint_tooltip = "Generate the .csv file"
text = "Create Translation File"

[node name="AutoOnSaveWarning" type="Label" parent="VBox"]
visible = false
margin_top = 870.0
margin_right = 320.0
margin_bottom = 901.0
custom_colors/font_color = Color( 1, 0.945098, 0, 1 )
text = "WARNING: Auto on save slows down the saving time of scenes, scripts, and resources"
autowrap = true

[node name="RemoveUnusedWarning" type="Label" parent="VBox"]
visible = false
margin_top = 957.0
margin_right = 308.0
margin_bottom = 1022.0
custom_colors/font_color = Color( 1, 0.945098, 0, 1 )
text = "WARNING: Remove Unused removes all keys that StringKeys didn't find, including ones that may actually be used in a file type it wasn't set to check. Backup recommended"
autowrap = true
[connection signal="toggled" from="VBox/Grid/CheckBox_ModifiedOnly" to="." method="_on_CheckBox_ModifiedOnly_toggled"]
[connection signal="toggled" from="VBox/Grid/CheckBox_AutoRunOnSave" to="." method="_on_CheckBox_AutoRunOnSave_toggled"]
[connection signal="toggled" from="VBox/Grid/CheckBox_RemoveUnused" to="." method="_on_CheckBox_RemoveUnused_toggled"]
[connection signal="pressed" from="VBox/Button" to="." method="_on_Button_pressed"]
